--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -8,7 +8,8 @@
     <item name="ic_btn_speak_now" type="drawable">@android:drawable/ic_btn_speak_now</item>
     <item name="ic_menu_set_as" type="drawable">@android:drawable/ic_menu_set_as</item>
     <item name="ic_menu_mylocation" type="drawable">@android:drawable/ic_menu_mylocation</item>
-    <item name="ic_menu_home" type="drawable">@drawable/ic_menu_logout_white</item>
+    <item name="ic_menu_logout" type="drawable">@drawable/ic_menu_logout_white</item>
+    <item name="ic_menu_home" type="drawable">@drawable/ic_menu_home_white</item>
     <item name="ic_dialog_info" type="drawable">@android:drawable/ic_dialog_info</item>
     <item name="ic_menu_myplaces" type="drawable">@android:drawable/ic_menu_myplaces</item>
 </resources>
