--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -46,6 +46,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignRight="@+id/titleDate"
+                    android:layout_alignTop="@id/titleDate"
+                    android:layout_alignBottom="@id/titleTime"
+                    android:layout_marginTop="@dimen/dp_3"
+                    android:layout_marginBottom="@dimen/dp_2"
+                    android:layout_marginRight="@dimen/dp_6"
                     android:background="@drawable/button_shape"
                     android:gravity="center"
                     android:text="出勤"
