--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -7,13 +7,5 @@
             android:width="1dp"
             android:color="@color/colorMainWhite" />
         <corners
-            android:radius="15dp" />
-        <padding
-            android:left="10dp"
-            android:top="0dp"
-            android:right="10dp"
-            android:bottom="0dp" />
-        <size
-            android:height="15dp"
-            android:width="30dp" />
+            android:radius="@dimen/dp_14" />
 </shape>
