--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -4,7 +4,7 @@
         <solid
             android:color="@color/colorMainRed" />
         <stroke
-            android:width="1dp"
+            android:width="@dimen/dp_1"
             android:color="@color/colorMainWhite" />
         <corners
             android:radius="@dimen/dp_14" />
