--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,6 @@
         app:itemIconTint="@color/colorMainWhite"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer"
-        app:theme="@style/NavigationDrawerStyle" />
+        android:theme="@style/NavigationDrawerStyle" />
 
 </android.support.v4.widget.DrawerLayout>
