--- a/app/src/main/res/layout/app_bar_update.xml
+++ b/app/src/main/res/layout/app_bar_update.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_main"
+            android:id="@+id/toolbar_update"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
@@ -30,43 +30,33 @@
                 android:gravity="bottom"
                 android:scaleType="centerCrop">
 
-
-                <TextView
-                    android:id="@+id/titleDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingRight="@dimen/dp_100"
-                    android:text=""
-                    android:textColor="@color/colorMainWhite"
-                    android:textSize="@dimen/dp_20" />
-
-                <Button
-                    android:id="@+id/button"
+                <ImageView
+                    android:id="@+id/ivBackToMain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignRight="@+id/titleDate"
-                    android:layout_alignTop="@id/titleDate"
-                    android:layout_alignBottom="@id/titleTime"
-                    android:layout_marginTop="@dimen/dp_3"
-                    android:layout_marginBottom="@dimen/dp_2"
+                    android:layout_centerVertical="true"
+                    android:layout_alignLeft="@+id/tvUpdateTitle"
                     android:layout_marginRight="@dimen/dp_6"
-                    android:background="@drawable/button_shape"
-                    android:gravity="center"
-                    android:text="出勤"
-                    android:textColor="@color/colorMainWhite"
-                    android:textSize="@dimen/dp_18" />
+                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
 
                 <TextView
-                    android:id="@+id/titleTime"
+                    android:id="@+id/tvUpdateTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/titleDate"
                     android:gravity="center"
-                    android:paddingRight="@dimen/dp_100"
-                    android:text=""
+                    android:text="2019年6月7日(金)"
                     android:textColor="@color/colorMainWhite"
-                    android:textSize="@dimen/dp_14" />
+                    android:textSize="@dimen/dp_24" />
+
+                <ImageView
+                    android:id="@+id/ivSave"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignRight="@+id/tvUpdateTitle"
+                    android:layout_marginRight="@dimen/dp_6"
+                    app:srcCompat="@android:drawable/ic_menu_save" />
 
             </RelativeLayout>
 
@@ -74,14 +64,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/fab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_margin="100dp"-->
-        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
+    <include layout="@layout/content_update" />
 
 </android.support.design.widget.CoordinatorLayout>
