--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorMainBlack">#000000</color>
     <color name="colorMainWhite">#FFFFFF</color>
     <color name="colorMainGrey">#707070</color>
+    <color name="colorMainLightGrey">#A8A8A8</color>
 </resources>
