--- a/app/src/main/res/layout/app_bar_update.xml
+++ b/app/src/main/res/layout/app_bar_update.xml
@@ -30,14 +30,6 @@
                 android:gravity="bottom"
                 android:scaleType="centerCrop">
 
-                <ImageView
-                    android:id="@+id/ivBackToMain"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_alignLeft="@+id/tvUpdateTitle"
-                    android:layout_marginRight="@dimen/dp_6"
-                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
 
                 <TextView
@@ -47,7 +39,18 @@
                     android:gravity="center"
                     android:text="2019年6月7日(金)"
                     android:textColor="@color/colorMainWhite"
+                    android:clickable="true"
                     android:textSize="@dimen/dp_24" />
+
+                <ImageView
+                    android:id="@+id/ivBackToMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignLeft="@+id/tvUpdateTitle"
+                    android:layout_marginRight="@dimen/dp_50"
+                    android:clickable="true"
+                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
                 <ImageView
                     android:id="@+id/ivSave"
@@ -56,6 +59,7 @@
                     android:layout_centerVertical="true"
                     android:layout_alignRight="@+id/tvUpdateTitle"
                     android:layout_marginRight="@dimen/dp_6"
+                    android:clickable="true"
                     app:srcCompat="@android:drawable/ic_menu_save" />
 
             </RelativeLayout>
