--- a/app/src/main/res/layout/content_update.xml
+++ b/app/src/main/res/layout/content_update.xml
@@ -28,6 +28,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="@string/update_hint_etStrTime"
+        android:focusable="false"
         android:text="" />
 
     <EditText
@@ -40,13 +41,5 @@
         android:inputType="textPersonName"
         android:hint="@string/update_hint_etDescription_update"
         android:text="" />
-
-    <Button
-        android:id="@+id/ggg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="422dp"
-        android:text="Button" />
 
 </RelativeLayout>
