--- a/app/src/main/res/layout/listview_maininfo.xml
+++ b/app/src/main/res/layout/listview_maininfo.xml
@@ -41,13 +41,13 @@
         android:layout_marginStart="@dimen/dp_90"
         android:layout_marginTop="@dimen/dp_8"
         android:contentDescription="@string/main_disability_StrImg"
-        app:srcCompat="@android:drawable/ic_menu_slideshow" />
+        app:srcCompat="@drawable/ic_play" />
 
     <TextView
         android:id="@+id/tvStrTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/imgStr"
+        android:layout_alignBaseline="@id/imgStr"
         android:layout_toEndOf="@id/imgStr"
         android:padding="6dp"
         android:text="9:30"
@@ -60,15 +60,14 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/imgStr"
         android:layout_marginStart="@dimen/dp_180"
-        android:padding="@dimen/dp_6"
         android:contentDescription="@string/main_disability_endImg"
-        app:srcCompat="@android:drawable/ic_lock_power_off" />
+        app:srcCompat="@drawable/ic_power_setting" />
 
     <TextView
         android:id="@+id/tvEndTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/imgEnd"
+        android:layout_alignBaseline="@id/tvStrTime"
         android:layout_toEndOf="@id/imgEnd"
         android:padding="6dp"
         android:text="18:30"
