--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -51,7 +51,7 @@
                     android:layout_marginTop="@dimen/dp_3"
                     android:layout_marginBottom="@dimen/dp_2"
                     android:layout_marginRight="@dimen/dp_6"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/style_button_main"
                     android:gravity="center"
                     android:text="出勤"
                     android:textColor="@color/colorMainWhite"
