--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,6 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle"
         app:layout_constraintVertical_bias="1.0"
-        android:background="@drawable/listview_shape"/>
+        android:background="@drawable/style_listview_main"/>
 
 </android.support.constraint.ConstraintLayout>
