--- a/app/src/main/res/layout/listview_maininfo.xml
+++ b/app/src/main/res/layout/listview_maininfo.xml
@@ -97,6 +97,7 @@
         android:textSize="@dimen/dp_12"
         android:ellipsize="end"
         android:maxLines="2"
+        android:textColor="@color/colorMainGrey"
         android:maxEms="500"/>
     <!--android:layout_marginRight="@dimen/dp_70"-->
 </RelativeLayout>
